Feature: Carousel, sorting and pagination
Carousel, pagination and sorting functionality added to index page.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,24 @@
 </head>
 <body>
     <main>
-        <section id="display-blog">
+        <section id="carousel-monty">
+            <div class="carousel-post" id="left-post"></div>
+            <div class="carousel-post" id="center-post"></div>
+            <div class="carousel-post" id="right-post"></div>
         </section>
+        
+        <button id="sort-button">Descending ⬇️</button>
+        <button id="parameter-button">Date of creation 📅</button>
+        <section>
+            <button id="previous-button">Previous Page</button>
+            <h1 id="page-indicator"></h1>
+            <button id="next-button">Next page</button>
+            <section id="display-blog"></section>
+        </section>
+
+
+        
     </main>
     <script src="/JavaScript/index.js"></script>
 </body>
-</html>
+</html
