--- a/blog-post.html
+++ b/blog-post.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--General meta-->
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/925aa09c49.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
+    <!---->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog article</title>
     <link rel="stylesheet" href="css/blog-post.css">
 </head>
 <body>
+    <header>
+        <a href="/index.html"><i class="fas fa-chevron-left"></i>Back to posts</a>
+    </header>
+
     <main>
         <section id="blog-entry">
 
