--- a/account/register.html
+++ b/account/register.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
     <!--General meta-->
-
+    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" href="/assets/logo-2D.png" type="image/png">
+    <meta name="author" content="Aksel Oldeide">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="https://kit.fontawesome.com/925aa09c49.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
-    <!---->
-    <link rel="stylesheet" href="/css/register.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <!--Generic meta-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register profile</title>
+
+    <title>Register profile</title>    
+    <link rel="stylesheet" href="/css/register.css">
 </head>
 <body>
 
