--- a/blog-post.html
+++ b/blog-post.html
@@ -18,7 +18,17 @@
 </head>
 <body>
     <header>
-        <a href="/index.html"><i class="fas fa-chevron-left"></i>Back to posts</a>
+        <div>
+            <a href="/index.html">
+                <i class="fas fa-chevron-left"></i>
+                Back to posts
+            </a>
+        </div>
+        <div id="logo">
+            <h1>GateFold</h1>
+            <p>Music Blog</p>
+        </div>
+        <div></div>
     </header>
 
     <main>
