--- a/index.html
+++ b/index.html
@@ -21,16 +21,20 @@
 </head>
 <body>
     <main>
+        <section id="top-logo">
+            <h1>GateFold</h1>
+            <p>Music Blog</p>
+        </section>
+
+        <h1 class="header-text">Latest posts:</h1>
         <section id="carousel-monty">
             <div class="carousel-post" id="left-post"></div>
             <div class="carousel-post" id="center-post"></div>
             <div class="carousel-post" id="right-post"></div>
         </section>  
-
-
-
+        
         <section id="grid-python">
-
+            <h1 class="header-text">Browse all posts</h1>
             <details id="sort-and-filter">
                 <summary>Filtering and sorting</summary>
                 <section id="sort-buttons">
@@ -62,7 +66,6 @@
             </section>
 
         </section>
-
     </main>
     <script src="/JavaScript/index.js"></script>
 </body>
