--- a/account/register.html
+++ b/account/register.html
@@ -27,9 +27,9 @@
     <main class="login-interface" id="login-interface">
             <h3>Create new user</h3>
                 <form class="register-field form-field">
-                    <label for="email">Email</label>
+                    <label for="email-field">Email</label>
                     <input value="@stud.noroff.no" type="email" name="email" id="email-field" placeholder="name@stud.noroff.no">
-                    <label for="name">Name</label>
+                    <label for="username-field">Name</label>
                     <input autocomplete="off" type="text" name="personal-name" id="username-field" placeholder="Name_Surname">
                     <label for="password">Password</label>
                     <input type="password" name="password" id="password-field" placeholder="Min 12 characters" autocomplete="off">
