Changes to Aria labels and alt-texts
* Changes to Aria labels and alt-texts
* Optimizing

--- a/account/login.html
+++ b/account/login.html
@@ -3,11 +3,11 @@
 <head>
     <!--General meta-->
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="icon" href="/assets/logo-2D.png" type="image/png" alt="GateFold logo">
+    <link rel="icon" href="/assets/logo-2D.png" type="image/png">
     <meta name="author" content="Aksel Oldeide">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://kit.fontawesome.com/925aa09c49.js" crossorigin="anonymous" aria-hidden="true"></script>
+    <script src="https://kit.fontawesome.com/925aa09c49.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Khand:wght@300;400;500;600;700&family=Lexend:wght@100..900&display=swap" rel="stylesheet">
     <!--Generic meta-->
     <meta charset="UTF-8">
@@ -34,6 +34,6 @@
         </form>
         <a href="/account/register.html" aria-label="Sign up link">Click here to sign up</a>
     </main>
-    <script src="/javascript/login.js" aria-hidden="true"></script>
+    <script src="/javascript/login.js"></script>
 </body>
 </html>
