--- a/account/register.html
+++ b/account/register.html
@@ -19,7 +19,7 @@
 <body>
 
     <header class="login-header" id="login-header">
-        <img id="logo-image" src="/assets/logo-2D.png" alt="">
+        <img id="logo-image" src="/assets/logo-2D.png" alt="logo">
         <h1>GateFold</h1>
         <h2>Record Shop</h2>
     </header>
