--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <link rel="stylesheet" href="/CSS/index.css">
     <title>Browse blog posts</title>
+    <meta name="description" content="Front page of GateFold Blog">
 </head>
 <body>
     <main>
@@ -23,7 +24,7 @@
             <p>Music Blog</p>
         </section>
 
-        <h1 class="header-text">Latest posts:</h1>
+        <h2 class="header-text">Latest posts:</h2>
         <section id="carousel-monty" aria-label="Carousel of latest blog posts">
             <div class="carousel-post" id="left-post" aria-label="Left post in carousel"></div>
             <div class="carousel-post" id="center-post" aria-label="Center post in carousel"></div>
@@ -31,7 +32,7 @@
         </section>  
         
         <section id="grid-python" aria-label="Blog posts grid">
-            <h1 class="header-text">Browse all posts</h1>
+            <h2 class="header-text">Browse all posts</h2>
             <details id="sort-and-filter" aria-label="Filtering and sorting options">
                 <summary>Filtering and sorting</summary>
                 <section id="sort-buttons" aria-label="Sort options">
@@ -57,7 +58,7 @@
 
             <section class="nav-buttons" aria-label="Pagination controls">
                 <button class="previous-button index-button" aria-label="Previous page">Previous Page</button>
-                <h1 class="page-indicator" aria-label="Current page indicator"></h1>
+                <p class="page-indicator" aria-label="Current page indicator"></p>
                 <button class="next-button index-button" aria-label="Next page">Next page</button>
             </section>
         </section>
