--- a/account/login.html
+++ b/account/login.html
@@ -15,6 +15,7 @@
 
     <title>Login page</title>
     <link rel="stylesheet" href="/css/login.css">
+    <meta name="description" content="Log in to GateFold Blog admin enviroment">
 </head>
 <body>
     <header class="login-header" id="login-header" aria-label="Login header">
