--- a/account/register.html
+++ b/account/register.html
@@ -15,6 +15,7 @@
 
     <title>Register profile</title>    
     <link rel="stylesheet" href="/css/register.css">
+    <meta name="description" content="Register a new user account">
 </head>
 <body>
 
