Changes to labels

--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 
         <h2 class="header-text">Latest posts:</h2>
         <section id="carousel-monty" aria-label="Carousel of latest blog posts">
-            <div class="carousel-post" id="left-post" aria-label="Left post in carousel"></div>
-            <div class="carousel-post" id="center-post" aria-label="Center post in carousel"></div>
-            <div class="carousel-post" id="right-post" aria-label="Right post in carousel"></div>
+            <div class="carousel-post" id="left-post" ></div>
+            <div class="carousel-post" id="center-post"></div>
+            <div class="carousel-post" id="right-post"></div>
         </section>  
         
         <section id="grid-python" aria-label="Blog posts grid">
@@ -38,8 +38,8 @@
                 <section id="sort-buttons" aria-label="Sort options">
                     <p>Sort:</p>
                     <div>
-                        <button id="sort-button" class="index-button" aria-label="Sort in descending order">Descending ⬇️</button>
-                        <button id="parameter-button" class="index-button" aria-label="Sort by date of creation">Date of creation 📅</button>
+                        <button id="sort-button" class="index-button">Descending ⬇️</button>
+                        <button id="parameter-button" class="index-button">Date of creation 📅</button>
                     </div>
                 </section>
 
