--- a/blog-post.html
+++ b/blog-post.html
@@ -14,6 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Blog article</title>
+    <meta name="description" content="Single post page of GateFold Blog">
     <link rel="stylesheet" href="css/blog-post.css">
 </head>
 <body>
